remove extra comma

--- a/source/dosage-examples.html
+++ b/source/dosage-examples.html
@@ -345,7 +345,7 @@ MedicationRequest
                 "system": "http://unitsofmeasure.org",
                 "code": "tbl"
               },
-              "scope": "administration",
+              "scope": "administration"
             }]
           }
         }
