R6 packages, and ballot intro clarifications

--- a/source/ballot-intro.html
+++ b/source/ballot-intro.html
@@ -23,7 +23,7 @@ ballot process:
 <ul>
   <li>As a normative standard, any substantive changes - that is, changes that impact on implementations - must be approved by the ballot - in other words, reballot is required</li>
   <li>You must sign up for the first ballot to participate in later ballots; if you do not have time to participate for a round of balloting, please abstain so that quorum levels are met</li> 
-  <li></li> 
+  <li>There is certain to be another ballot after this, but we are hoping that we won't require additional full ballots. Please raise significant issues in the first ballot</li> 
 </ul>
 <p>
 Balloters should keep the following in mind about ballot scope:
@@ -33,7 +33,7 @@ Balloters should keep the following in mind about ballot scope:
   <li>Moving CodeSystems from core to THO is also only a substantive changes if (a) the CodeSystem is bound to a Coding, CodeableConcept, or CodeableReference, and (b) the URL changes</li>
   <li>Implicit in that is that forcing minor changes in URLs etc on Implementation Guides is not itself substantive</li>
   <li>The standards status and status of all the content in this ballot to set to Normative or Informative, and active, but the FMM status of the underlying artifacts has not been consistently updated, pending revisions to the overall FMM framework</li>
-  <li>The cross version comparisons, difference analysis, structure maps and transforms have not been updated for this ballot. This will be done for the next ballot</li>
+  <li>The cross version comparisons, difference analysis, structure maps and transforms have not been updated for this ballot. This will be done for the next ballot. These weill also not count as substantative changes</li>
 </ul>
 <p>
 And these notes about breaking changes:
@@ -45,8 +45,8 @@ And these notes about breaking changes:
      are of particular importance for balloters to consider
   </li>
   <li>If content was normative in R4, then this specification is not allowed to contain breaking changes to that content under the rules published in <i>this</i>
-    version, so balloters should pay particular attention to these areas</li>
-  <li>As R5 was not normative, breaking changes from R5 are allowed</li>
+    version, so balloters should pay particular attention to the parts that were normative in R4</li>
+  <li>As R5 was not normative, breaking changes from R5 are allowed (even in the R4 normative areas)</li>
   <li>Other parts of the specification may contain breaking changes from previous versions</li>
 </ul>
 <p>
