more PA Operations out

--- a/source/http.html
+++ b/source/http.html
@@ -1603,8 +1603,8 @@ with a particular encounter:
   GET [base]/Encounter/23423445/Observation?code=2951-2  {&amp;_format=[mime-type]}
 </pre>
 <p>
-Note that there are specific operations defined to support fetching <a href="patient-operation-everything.html">an entire patient record</a>
-or <a href="encounter-operation-everything.html">all record for an encounter</a>.
+Note that there are specific operations defined to support fetching <a href="https://build.fhir.org/ig/HL7/admin-incubator/branches/main/en/OperationDefinition-Patient-everything.html">an entire patient record</a>
+or <a href="https://build.fhir.org/ig/HL7/admin-incubator/branches/main/en/OperationDefinition-Encounter-everything.html">all record for an encounter</a>.
 </p>
 <p>
 It is also possible to search across multiple resource types.  For example, the following searches
