--- a/source/history.html
+++ b/source/history.html
@@ -165,7 +165,7 @@ notes: do not list revision in the version
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-InventoryReport.html">InventoryReport</a>,
         <a href="nutritionintake.html">NutritionIntake</a>,
         <a href="nutritionproduct.html">NutritionProduct</a>,
-        <a href="permission.html">Permission</a>,
+        <a href="https://build.fhir.org/ig/HL7/data-access-policies/StructureDefinition-Permission.html">Permission</a>,
         TestPlan and
         <a href="https://build.fhir.org/ig/HL7/oo-incubator/StructureDefinition-Transport.html">Transport</a> + New types: 
         <a href="datatypes.html#integer64">integer64</a>,
@@ -288,7 +288,7 @@ to a new type.
       2nd Milestone for R5 - May 2020 Virtual Connectathon Stable Version. Significant changes:
       <ul>
        <li>Further Development of the Subscription framework (<a href="subscriptionstatus.html">SubjectStatus</a>, rename Topic to SubscriptionTopic)</li>
-       <li>Add new Resources <a href="permission.html">Permission</a>, <a href="nutritionproduct.html">NutritionProduct</a>, <a href="https://build.fhir.org/ig/HL7/ebm/StructureDefinition-Citation.html">Citation</a>, and EvidenceReport</li>
+       <li>Add new Resources <a href="https://build.fhir.org/ig/HL7/data-access-policies/StructureDefinition-Permission.html">Permission</a>, <a href="nutritionproduct.html">NutritionProduct</a>, <a href="https://build.fhir.org/ig/HL7/ebm/StructureDefinition-Citation.html">Citation</a>, and EvidenceReport</li>
       </ul>
     </td>
   </tr>
