--- a/source/secpriv-module.html
+++ b/source/secpriv-module.html
@@ -51,7 +51,7 @@ The Security and Privacy module includes the following materials:
     <a href="consent.html">Consent</a>
   </li>
   <li>
-    <a href="permission.html">Permission</a>
+    <a href="https://build.fhir.org/ig/HL7/data-access-policies/StructureDefinition-Permission.html">Permission</a>
   </li>
   <li>
     <a href="provenance.html">Provenance</a>
@@ -493,7 +493,7 @@ of resources (e.g., separating the entries in a bundle, or conversion between
 XML and JSON during processing),
 </li>
 <li>
-develop a <a href="permission.html">Permission</a> resource and show relationship to Consent, 
+develop a <a href="https://build.fhir.org/ig/HL7/data-access-policies/StructureDefinition-Permission.html">Permission</a> resource and show relationship to Consent, 
 and distributed Access Control and Enforcement
 </li>
 </ul>
