First take of the updates.

--- a/source/patterns.html
+++ b/source/patterns.html
@@ -82,6 +82,7 @@ The following Interface Patterns are defined:
 </p>
 
 <ul>
+  <li><b><a href="document.html">Document</a></b>: <%pattern-impls document%></li>
   <li><b><a href="participant.html">Participant</a></b>: <%pattern-impls participant%>
     <ul>
       <li><b><a href="participantcontactable.html">Participant - Contactable</a></b>: <%pattern-impls participantcontactable%>
