QA: Version Diff - include the links to the version specific 3 diff pages

--- a/source/diff.html
+++ b/source/diff.html
@@ -47,6 +47,11 @@ This analysis is available for R5 as <a href="fhir.r5.diff.xml">XML</a> or <a hr
 or for R4 as <a href="fhir.r4.diff.xml">XML</a> or <a href="fhir.r4.diff.json">JSON</a>
 or for R4B as <a href="fhir.r4b.diff.xml">XML</a> or <a href="fhir.r4b.diff.json">JSON</a>
 </p>
+<ul> 
+  <li>Differences between <a href="diff-r5.html">R5 and R6</a></li>
+  <li>Differences between <a href="diff-r4b.html">R4B and R6</a></li>
+  <li>Differences between <a href="diff-r4.html">R4 and R6</a></li>
+</ul>
 
 [%diff-analysis *%]
 
