--- a/source/search.html
+++ b/source/search.html
@@ -6466,8 +6466,13 @@ In other respects, servers have considerable discretion with regards to supporti
 <ul>
  <li>Servers can choose which parameters to support (other than <code>_id</code> above).</li>
  <li>Servers can choose when and where to implement parameter chaining, and when and where they support the <code>_include</code> parameter.</li>
- <li>Servers can declare additional parameters in the profiles referenced from their Capability statements. <span class="fhir-conformance">Servers SHOULD define custom search parameters
-    with codes starting with a hyphen ("-") character to ensure that the names they choose do not clash with future parameters defined by this specification.</span></li>
+ <li>Servers can declare additional parameters in the profiles referenced from their Capability statements. 
+  <span class="fhir-conformance">
+    Servers and IG authors SHOULD define custom search parameters with codes starting with a prefix defining the
+    scope of the defining organization.  Such a prefix SHALL NOT start with characters other than alphanumeric
+    characters (e.g. '-', '~', etc.), as other characters either already have or may in the future have meaning
+    within the search syntax.  However, this is not sufficient to guarantee disambiguation - see the rules in 
+    <a href="#matching-basics">Search Tests</a></span>.</li>
  <li>Servers are not required to enforce case sensitivity on parameter names, though the names are case sensitive (and URLs are generally case-sensitive).</li>
  <li>Servers can choose how many results to return, though the client can use <code>_count</code> to limit.</li>
  <li><span class="fhir-conformance">Servers can choose how to sort the return results, though they SHOULD honor the <code>_sort</code> parameter.</span></li>
