--- a/source/signatures.html
+++ b/source/signatures.html
@@ -304,7 +304,7 @@ When excluding elements from signature, the elements on the path to reach the el
 included.  For example, if performing a 'narrative' canonicalization of a Bundle with a
 composition, if the Narrative elements <code>Composition.text</code> or <code>Composition.section.text exist</code>,
 then the <code>Bundle.entry</code>, <code>.resource</code> and <code>Composition.text</code> nodes
-needed to reach those elements would be retained.  The signed content may not be sufficient to
+needed to reach those elements would be retained.  The signed content might not be sufficient to
 constitute a 'valid' instance, but this is ok because the signature is focused only on what is attested to.
 </p>
 <p>
