1. Updated the Chosing a system requirements on the Using Codes page to align with prevailiy TSMG policy. 2. Replaced references to the former HL7 Terminology Authority (HTA) with the HL7 Terminology Services Management Group (TSMG).

--- a/source/identifier-registry.html
+++ b/source/identifier-registry.html
@@ -34,8 +34,7 @@ URI.
 </p>
 <p>
 If an identifier system for a 'shared' identifier is not listed in HL7 Terminology, implementers <b>SHOULD</b> (and HL7 international published specifications <b>SHALL</b>) follow the
-process for determining Identifier.system URIs defined by the HL7 Terminology Authority, as documented
-<a href="https://confluence.hl7.org/display/TA/Validating+and+Requesting+Identifiers+for+an+External+Code+Systems+and+Identifier+Systems">here</a>.
+process for determining Identifier.system URIs defined by the <a href="https://www.hl7.org/Special/committees/tsmg/index.cfm">HL7 Terminology Services Management Group (TSMG)</a>, as documented in the <a href="https://confluence.hl7.org/x/LKOZCQ">Terminology Expectations in FHIR</a> policy.
 </p>
 <p>
 See also the <a href="terminologies-systems.html">list of known coding systems</a> that can be used in the <i>system</i> element of the <a href="datatypes.html#Coding">Coding</a> datatype.
