--- a/source/terminologies.html
+++ b/source/terminologies.html
@@ -149,88 +149,11 @@ inferences can be performed consistently by different systems. For this reason, 
 of the correct URI for the system attribute is critical.
 </p>
 <p>
-The correct value to use in the <i>system</i> for a given code system can be determined
-by working through the following list, in order:
-</p>
-<ul>
- <li><a href="https://terminology.hl7.org/">Terminology.hl7.org </a> (THO) -  If a code system is listed here, the canonical CodeSystem URL SHALL be used.</li>
- <li>Not listed in <a href="https://terminology.hl7.org/">Terminology.hl7.org </a>, and the code system is external to HL7, the CodeSystem identifier authorized by HTA SHALL be used.
-  <ul>
-   <li>Check the HL7 Terminology Authority (HTA) JIRA project to determine if a request is in process to obtain an identifier
-    <ul>
-	 <li><a href="https://jira.hl7.org/projects/HTA/issues/">https://jira.hl7.org/projects/HTA/issues/</a></li>
-	 <li>No JIRA in progress? Check the <a href="https://confluence.hl7.org/pages/viewpage.action?pageId=91999004">HTA Confluence pages</a> to determine if a request is in process to obtain an identifier.</li>
-	</ul>
-   </li>
-   <li>If none of the HTA resources address your issue,
-    <ul>
-	 <li>Start the <a href="https://confluence.hl7.org/display/TA/Request+Content+in+External+Terminologies">HTA process to request content in external terminologies</a> communicating the temporary identifier you assigned</li>
-	 <li>Create a temporary identifier following this pattern:
-	  <ul>
-	   <li>terminology.hl7.org/temporary/CodeSystem/xxxxx   (where xxxx is a meaningful text string)</li>
-	  </ul>
-	 </li>
-	</ul>
-   </li>
-   <li>Monitor the HTA request and update your specification when an authoritative identifier is available</li>
-  </ul>
- </li>
- <li>Not listed in <a href="http://terminology.hl7.org/">Terminology.hl7.org</a>, and the code system is internal to HL7, and is expected to be used in a production system
-  <ul>
-  <li>If you don't see your CodeSystem in THO,
-    <ul>
-	 <li>Create a canonical URL following this pattern: terminology.hl7.org/CodeSystem/xxxxx    (where xxxx is a meaningful text string)
-	  <ul>
-	   <li>This will start the process to create a NamingSystem resource in terminology.hl7.org for your CodeSystem </li>
-	   <li>The CodeSystem content may remain within the IG</li>
-	  </ul>
-	 </li>
-	</ul>
-   </li>
-   <li>When the CodeSystem is at a state where the IG authors/developers/interested parties are confident it is sufficient, and as early in the process as possible,
-    <ul>
-	 <li><a href="https://confluence.hl7.org/display/VMAH/How+To+Submit+a+UTG+Change+Proposal">Start the UTG process</a> to move the CodeSystem content to THO</li>
-	</ul>
-   </li>
-   <li>Set yourself as a watcher on the UP JIRA ticket and update your specification when your CodeSystem is in THO</li>
-  </ul>
- </li>
- <li>Not listed in <a href="http://terminology.hl7.org/">Terminology.hl7.org</a>, and the code system is intended to <i>never be used in a production system,</i> and will be used to create a value set bound with Example binding strength
-  <ul>
-  <li>If the example concept codes will be used in multiple IGs,
-   <ul>
-    <li>Use the following URL pattern:  [ig-base-canonical]/CodeSystem/example-xxxxx (from one of the multiple IGs, there is no reason to define the same example CodeSystem in multiple IGs)</li>
-   </ul>
-  </li>
-  <li>If the example concept codes will only ever be used in a single IG:
-   <ul>
-    <li>Create an identifier following this pattern: [ig-base-canonical]/CodeSystem/example-xxxxx  (where xxxxx is a specific string that conveys intent)</li>
-   </ul>
-  </li>
-  </ul>
- </li>
-</ul>
-<p>
-
-In the unusual situation where a code system is not resolved by this list, create a temporary identifier following this pattern: terminology.hl7.org/temporary/CodeSystem/xxxx. Contact the HL7 Vocabulary co-chairs.
+If a code system is listed in <a href="https://terminology.hl7.org/">terminology.hl7.org (THO)</a>, the canonical CodeSystem URL SHALL be used.
 </p>
 <p>
-For publishers of code systems, the following considerations should be kept in mind when
-defining the correct URI to use:
+Otherwise, the <a href="https://www.hl7.org/Special/committees/tsmg/index.cfm">HL7 Terminology Services Management Group (TSMG)</a> process described in <a href="https://confluence.hl7.org/x/LKOZCQ">Terminology Expectations in FHIR</a> SHALL be followed.
 </p>
-<ul>
- <li>Once defined and in production use, in rare situations, the code system URI may change. Implementers should design their system to support a code system identifier change. Terminology.hl7.org implements NamingSystem resources to manage code system identifiers and their effective date range.</li>
- <li>An http: address SHOULD resolve to some useful description of the code system. Ideally, if a user makes a request of the address with the media type set to a FHIR media type, the server will respond
-   with a <a href="codesystem.html">CodeSystem resource</a>, but some other human or computable definition is allowed</li>
- <li>HTTP addresses should be permalinks which may re-direct to the current correct content</li>
- <li>A scope of the code system URI and the correct usage of codes and displays in its namespace will be clearly defined by HTA.
-   See examples for <a href="https://terminology.hl7.org/SNOMEDCT.html">SNOMED CT</a>, <a href="https://terminology.hl7.org/RxNorm.html">RxNorm</a>, <a href="https://terminology.hl7.org/LOINC.html">LOINC</a>, and <a href="https://terminology.hl7.org/NDC.html">NDC</a></li>
- <li>All code systems internal to HL7 use <a href="http://terminology.hl7.org/">Terminology.hl7.org</a> as the base. Generally, allocation of URLs is hierarchical, and most care is required in choosing the Base URL.
-  <ul>
-   <li>The url pattern is:  terminology.hl7.org/CodeSystem/xxxxxx/xxxxxxx</li>
-  </ul>
- </li>
-</ul>
 <p>
 Note: if the code system is made available packaged inside a <a href="valueset.html">ValueSet</a> resource, the
 correct URL for the <code>system</code> value is <i>ValueSet.codeSystem.system</i>, not <i>ValueSet.uri</i>.
