--- a/source/modules-fragment.html
+++ b/source/modules-fragment.html
@@ -103,16 +103,6 @@
                 <a href="riskassessment.html">RiskAssessment</a>, etc.
             </p>
         </div>
-        <div id="diagnostics" class="box">
-            <p class="head">
-                <a style="background-image: url('diagnostics.jpg');" href="diagnostics-module.html">
-                    <span>Diagnostics</span>
-                </a>
-            </p>
-            <p class="content">
-                <a href="observation.html">Observation</a>, <a href="diagnosticreport.html">DiagnosticReport</a>, <a href="specimen.html">Specimen</a>, <a href="imagingstudy.html">ImagingStudy</a>, <a href="https://build.fhir.org/ig/HL7/cg-incubator/StructureDefinition-MolecularDefinition.html">MolecularDefinition</a>, <a href="documentreference.html">DocumentReference</a>, <a href="servicerequest.html">ServiceRequest</a>, etc.
-            </p>
-        </div>
         <div id="medication" class="box">
             <p class="head">
                 <a style="background-image: url('medication.png');" href="medications-module.html">
@@ -130,7 +120,8 @@
                 </a>
             </p>
             <p class="content">
-                <a href="workflow.html">Introduction</a> + <a href="task.html">Task</a>, <a href="appointment.html">Appointment</a>, <a href="schedule.html">Schedule</a>, <a href="servicerequest.html">Referral</a>, <a href="plandefinition.html">PlanDefinition</a>,
+                <a href="workflow.html">Introduction</a> + <a href="task.html">Task</a>,
+                 <a href="appointment.html">Appointment</a>, <a href="schedule.html">Schedule</a>, <a href="servicerequest.html">ServiceRequest</a>, <a href="plandefinition.html">PlanDefinition</a>,
                 etc.
             </p>
         </div>
@@ -144,6 +135,51 @@
                 <a href="claim.html">Claim</a>, <a href="account.html">Account</a>,<br/><a href="invoice.html">Invoice</a>, <a href="https://build.fhir.org/ig/HL7/admin-incubator/StructureDefinition-ChargeItem.html">ChargeItem</a>, <br/>
                 <a href="coverage.html">Coverage</a> + Eligibility <br/><a href="coverageeligibilityrequest.html">Request</a> &amp;
                 <a href="coverageeligibilityresponse.html">Response</a>, <a href="explanationofbenefit.html">ExplanationOfBenefit</a>, etc.
+            </p>
+        </div>
+    </div>
+    <div class="box_row box_more">
+        <div id="diagnostics" class="box">
+            <p class="head">
+                <a style="background-image: url('diagnostics.jpg');" href="diagnostics-module.html">
+                    <span>Diagnostics</span>
+                </a>
+            </p>
+            <p class="content">
+                <a href="observation.html">Observation</a>, 
+                <a href="diagnosticreport.html">DiagnosticReport</a>,
+                <a href="documentreference.html">DocumentReference</a>,
+                <a href="specimen.html">Specimen</a>, <a href="imagingstudy.html">ImagingStudy</a>, etc.
+            </p>
+        </div>
+        <div id="devices" class="box">
+            <p class="head">
+                <a style="background-image: url('devices.png');" href="device-module.html">
+                    <span>Devices</span>
+                </a>
+            </p>
+            <p class="content">
+                <a href="device.html">Device</a>, <a href="devicealert.html">DeviceAlert</a>, <a href="devicedefinition.html">DeviceDefinition</a>, <a href="devicemetric.html">DeviceMetric</a>, <a href="devicerequest.html">DeviceRequest</a>, etc.
+            </p>
+        </div>
+        <div id="nutrition" class="box">
+            <p class="head">
+                <a style="background-image: url('nutrition.png');" href="nutrition-module.html">
+                    <span>Nutrition</span>
+                </a>
+            </p>
+            <p class="content">
+                <a href="nutritionorder.html">NutritionOrder</a>, <a href="nutritionintake.html">NutritionIntake</a>, <a href="nutritionproduct.html">NutritionProduct</a>
+            </p>
+        </div>
+        <div id="biologicals" class="box">
+            <p class="head">
+                <a style="background-image: url('blood-bag.png');" href="biologically-derived-product-module.html">
+                    <span>Biological Products</span>
+                </a>
+            </p>
+            <p class="content">
+                <a href="biologicallyderivedproduct.html">BiologicallyDerivedProduct</a>, <a href="https://build.fhir.org/ig/HL7/oo-incubator/en/StructureDefinition-BiologicallyDerivedProductDispense.html">BiologicallyDerivedProductDispense</a>
             </p>
         </div>
     </div>
