--- a/source/history.html
+++ b/source/history.html
@@ -94,6 +94,19 @@ template:
 notes: do not list revision in the version
 -->
 <tr>
+  <td>6.0.0-ballot4<a name="v6.0.0-ballot4"></a></td>
+  <td>
+    <p>R6 1st Normative Ballot. Significant changes:</p>
+    <ul>
+      <li>Move a <a href="ballot-intro.html#details">set of definitions</a> out to be <a href="resource.html#additional">Additional Resources</a></li>
+      <li><a href="dosage.html">Dosage Types</a>: Rework to handle complex dosing regimes</li>
+      <li><a href="signatures.html">Signatures</a>: Rework the way signing works</li>
+      <li>Extensive minor changes across the entire specification</li>
+      <li>Change the status of everything to normative now, except for explicitly marked informative pages</li>
+    </ul>
+  </td>
+</tr>
+<tr>
   <td>6.0.0-ballot3<a name="v6.0.0-ballot3"></a></td>
   <td>
     <p>R6 3rd Draft Ballot. Significant changes:</p>
